# smart_validation

./: smart validation v0.2.0  smart validation v0.2.1.0  smart validation v0.2.2.0
smart_validation_final/: README.md  app_streamlit.py  config.yaml  pyproject.toml  requirements.txt
smart_validation_final/smart_validation/: app.py  assemble.py  author.py  config.py  logs.py  lst.py  paths.py  report.py  scanner.py  tfl_map.py  tnf.py
